add some changes

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
       <img src="./img/galuh.png" alt="galuhpic" width="400" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Galuh Bhara</h1>
       <p class="lead">Information System and Technology Student, IoT enthusiast</p>
+      <div class="row-md-5">
+        <a href="https://drive.google.com/file/d/1KC58RFGLGFYI9pVb4gc9pcNEkiUZD5AF/view?usp=sharing" class="btn bg-white">Download CV</a>
+      </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffff"
@@ -61,7 +64,9 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-7 mb-3">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque suscipit doloribus reprehenderit impedit? Dolorum explicabo rem ex nisi cupiditate non hic soluta obcaecati corporis similique facilis veritatis, ullam, enim ipsum.
+            Halo! Nama saya Galuh Dipa Bharata, saat ini saya sedang berkuliah di Institut Teknologi Bandung, dengan program studi Sistem dan Teknologi Informasi. Selama saya berkuliah, saya menjalankan beberapa project, seperti merakit
+            IoT, membuat web sederhana, dan bahkan mengintegrasikan keduanya. Hal ini tentu merupakan tantangan bagi saya, yang mana saya baru saja memulai belajar untuk menuliskan kode ketika memasuki bangku kuliah. Tapi hal tersebut tidak
+            menjadi hambatan saya dalam belajar. Saya ingin terus belajar, sampai pada akhirnya bisa menguasai teknologi sesuai dengan apa yang memang dibutuhkan masyarakat.
           </div>
         </div>
       </div>
@@ -87,8 +92,10 @@
               <img src="./img/2.png" class="card-img-top" alt="bosbuy" />
               <div class="card-body">
                 <h5 class="card-title">Bos Buy</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">
+                  Sebuah aplikasi desktop yang dibuat dengan PyQT. Aplikasi ini adalah bentuk sederhana dari aplikasi grocery online. Dimana user dapat melakukan pembayaran sederhana, checkout, dan seluruh kegiatan dicatat dalam database.
+                </p>
+                <a href="https://github.com/bharata101/bosbuy" class="btn btn-primary">Github</a>
               </div>
             </div>
           </div>
@@ -96,9 +103,11 @@
             <div class="card">
               <img src="./img/4.png" class="card-img-top" alt="esp32" />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Mask Detection and Temprature Checker</h5>
+                <p class="card-text">
+                  Sebuah project rekayasa sistem multimedia, kami diberikan kesempatan untuk merakit ESP32-cam agar bisa mendeteksi apakah seseorang menggunakan masker atau tidak ketika ingin memasuki sebuah tempat atau gedung.
+                </p>
+                <a href="https://youtu.be/uthxV9zL9QM" class="btn btn-primary">Youtube</a>
               </div>
             </div>
           </div>
@@ -106,9 +115,9 @@
             <div class="card">
               <img src="./img/3.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Gas Leak Monitoring System</h5>
+                <p class="card-text">Sebuah IoT projects dimana kita merakit sebuah IoT yang dapat terhubung melalui wifi. Keterhubungan wifi ini berfungsi untuk mengirimkan informasi apabila terjadi kebocoran Gas pada suatu tempat.</p>
+                <a href="https://youtube.com/shorts/YRpQkgp32cg" class="btn btn-primary">Youtube</a>
               </div>
             </div>
           </div>
@@ -116,19 +125,20 @@
             <div class="card">
               <img src="./img/1.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Simple Login</h5>
+                <p class="card-text">Membuat sistem login dengan menggunakan JWT, Sql, Python, kemudian mencoba untuk mendockerize login sistem ini.</p>
+                <a href="https://youtu.be/rKOeRCJqOB0" class="btn btn-primary">Youtube</a>
+                <a href="https://github.com/bharata101/fastapi2" class="btn btn-primary">Github</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+              <img src="./img/5.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Notes App Backend</h5>
+                <p class="card-text">Kode backend yang dituliskan untuk membuat front-end sides agar bisa berjalan. Project ini dilakukan ketika mengikuti course backend untuk pemula di platform yang bernama Dicoding.</p>
+                <a href="https://github.com/bharata101/notes-app-backend/tree/master/src" class="btn btn-primary">Github</a>
               </div>
             </div>
           </div>
